# Strake-Engine

./: .README.md  .gitignore  CMakeLists.txt  Ghost  LICENSE  README.md  justfile  main.cpp
ECS/: CMakeLists.txt  config.cpp  config.hpp
ECS/Loop/: CMakeLists.txt  loop.cpp  loop.hpp
ECS/Time/: CMakeLists.txt  time.cpp  time.hpp
ECS/Window/: CMakeLists.txt  window.cpp
ECS/include/ECS/: Application.hpp  Camera.hpp  Component.hpp  Config.hpp  Entity.hpp  EntityManager.hpp  EventDispatcher.hpp  EventHandler.hpp  GameLoop.hpp  GameObject.hpp  LightManager.hpp  Lights.hpp  Loop.hpp  Material.hpp  MeshFilter.hpp  MeshRenderer.hpp  Scene.hpp  Script.hpp  Shaders.hpp  Textures.hpp  Time.hpp  Transform.hpp  Window.hpp  init.hpp
ECS/src/: Config.cpp  init.cpp
ECS/src/Application/: Application.cpp  GameLoop.cpp
ECS/src/Component/: Camera.cpp  Component.cpp  Cube.cpp  Lights.cpp  MeshFilter.cpp  MeshRenderer.cpp  Script.cpp  Transform.cpp
ECS/src/Config/: Config.cpp
ECS/src/Dispatcher/: EventDispatcher.cpp
ECS/src/Entity/: Entity.cpp  EntityManager.cpp
ECS/src/GameObject/: GameObject.cpp
ECS/src/Loop/: Loop.cpp
ECS/src/Managers/: LightManager.cpp
ECS/src/Material/: Material.cpp  Texture.cpp  Texture2D.cpp  Texture3D.cpp
ECS/src/Scene/: Scene.cpp
ECS/src/Shader/: Shader.cpp  ShaderProgram.cpp
ECS/src/Shader/glsl/color/: vertex.glsl
ECS/src/Shader/glsl/shadow/: fragment.glsl  vertex.glsl
ECS/src/Shader/glsl/texture2D/: fragment.glsl  vertex.glsl
ECS/src/Texture/: Texture.cpp  Texture2D.cpp  Texture3D.cpp
ECS/src/Time/: Time.cpp
ECS/src/Window/: EventHandler.cpp  Window.cpp
tests/: CMakeLists.txt  justfile  mouse_visibility.frag  opengl.cpp  test.cpp
tests/Shaders/include/: shaders.hpp
tests/Shaders/src/: default.frag  default.vert  shaders.cpp
tests/glad/include/glad/: glad.h
tests/glad/src/: glad.c
tests/myGL/: CMakeLists.txt
tests/myGL/include/myGL/: Shaders.hpp
tests/myGL/src/Shaders/: Shaders.cpp
tests/stacking/: main.cpp  sfml_opengl_example  test
